# hub

./: .buildinfo  .gitignore  CHANGELOG  CMakeLists.txt  genindex.html  search.html  searchindex.js
.doctrees/: environment.pickle
.doctrees/api/: FAQ.doctree  build.doctree  examples.doctree  hub.doctree  index.doctree  license.doctree  overview.doctree  tools.doctree  whatDoYouWantToDo.doctree  whoIsUsingIt.doctree  whyUseIt.doctree
.github/workflows/: all.yml  buildAndTest.yml  checkCoverage.yml  codeQuality.yml  deployDoc.yml  main.yml  testAsExternalProject.yml  testAsFetchContent.yml  testAsSubmodule.yml
api/: FAQ.html  build.html  examples.html  hub.html  index.html  license.html  overview.html  tools.html  whatDoYouWantToDo.html  whoIsUsingIt.html  whyUseIt.html
classes/: annotated.html  classes.html  classhub_1_1Matrix.html  classhub_1_1MatrixXD-members.html  classhub_1_1MatrixXD.html  classhub_1_1MatrixXDBase-members.html  classhub_1_1MatrixXDBase.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_00_01N3_00_01N4_01_4-members.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_00_01N3_00_01N4_01_4.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_00_01N3_01_4-members.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_00_01N3_01_4.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_01_4-members.html  classhub_1_1MatrixXD_3_01Type_00_01N_00_01N2_01_4.html  classhub_1_1MatrixXD_3_01Type_00_01N_01_4-members.html  classhub_1_1MatrixXD_3_01Type_00_01N_01_4.html  classhub_1_1SerializerT.html  classhub_1_1data_1_1Mesh-members.html  classhub_1_1data_1_1Mesh.html  classhub_1_1sensor_1_1Acquisition.html  classhub_1_1sensor_1_1AcquisitionT.html  classhub_1_1sensor_1_1InputSensor.html  classhub_1_1sensor_1_1OutputSensor.html  classhub_1_1sensor_1_1OutputSensorT.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8-members.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8__Packed-members.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8__Packed.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8__Packed__Updated-members.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Dof6__RGB8__Packed__Updated.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__Instance.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__RGB8__Dof6-members.html  classhub_1_1sensor_1_1outputSensor_1_1OutputSensor__RGB8__Dof6.html  dir_b09ab068c21da7c3e9d5d10edd23e7bb.html  dir_f511ba0178b53c726d0a84462dac4106.html  doxygen_crawl.html  functions_a.html  functions_func.html  functions_func_g.html  functions_func_r.html  functions_func_s.html  (+13 more)
classes/search/: all_1.js  all_10.js  all_11.js  all_7.js  all_8.js  all_c.js  all_e.js  classes_6.js  classes_a.js  functions_0.js  functions_6.js  functions_a.js  functions_e.js  functions_f.js  typedefs_5.js  typedefs_c.js  variables_6.js  variables_f.js
cmake/: CodeCoverage.cmake  GetVersionFromGitTag.cmake
doc/: CMakeLists.txt
scripts/: cmake-format-all.sh  cmake-remove-empty-comments.sh  coverageDecline.sh  source-format-all.sh  source-remove-empty-comments.sh  source_dirs.txt
scripts/test/: CMakeLists.txt  example.hpp
src/: CMakeLists.txt  Config.cmake.in  Version.hpp.in
src/client/: Asker.hpp  Viewer.hpp
src/client/asker/: AskerInterface.hpp  AskerMqtt.hpp  AskerServer2.hpp
src/client/viewer/: ViewerHandler.hpp  ViewerInterface.hpp  ViewerMqtt.hpp  ViewerServer2.cpp  ViewerServer2.hpp  ViewerStream.hpp
src/core/: Any.hpp  Anyable.hpp  Base.hpp  Buffer.hpp  Configuration.hpp  Format.hpp  Info.cpp  Info.hpp  Input.hpp  InputBase.hpp  Matrix.hpp  MatrixBase.hpp  MetaData.hpp  Node.hpp  Output.hpp  OutputBase.hpp  Resolution.hpp  Serializer.hpp  SerializerT.hpp  Utils.cpp  Utils.hpp  ios.hpp
src/core/base/: Defines.hpp  Macros.hpp  Traits.hpp
src/core/io/: Archive.hpp  InputOutput.hpp  Memory.hpp
src/core/matrix/: MatrixT.hpp  MatrixTs.hpp  MatrixXD.hpp
src/core/serializer/: SerializerBoost.hpp  SerializerI.hpp  SerializerImpl.hpp  SerializerImpl2.hpp  SerializerZpp.hpp  SerializerZppBits.hpp
src/data/: Mesh.cpp  Mesh.hpp  UserData.hpp
src/io/: File.hpp  Header.cpp  Header.hpp  InputOutputSocket.hpp  Stream.hpp  StreamBase.hpp  StreamMqtt.hpp  StreamServer2.hpp
src/io/input/: InputFile.hpp  InputStream.hpp  InputStreamMqtt.hpp  InputStreamServer2.cpp  InputStreamServer2.hpp
src/io/output/: OutputFile.hpp  OutputStream.hpp  OutputStreamMqtt.hpp  OutputStreamServer2.cpp  OutputStreamServer2.hpp
src/native/: Native.hpp  native_Any.hpp  native_Header.hpp  native_MetaData.cpp  native_MetaData.hpp  native_OutputStream.hpp  native_Viewer.hpp  native_ViewerHandler.hpp
src/native/data/: native_Mesh.cpp  native_Mesh.hpp
src/native/sensor/: native_Acquisition.cpp  native_Acquisition.hpp  native_InputSensor.hpp  native_OutputSensor.hpp  native_SensorSpec.cpp  native_SensorSpec.hpp
src/net/: ClientSocket.hpp  ClientSocketI.hpp  ServerSocket.hpp  ServerSocketI.hpp
src/net/boost/: ClientSocketBoost.hpp  ServerSocketBoost.hpp
src/net/system/: ClientSocketSystem.cpp  ClientSocketSystem.hpp  NetUtilsSystem.cpp  NetUtilsSystem.hpp  ServerSocketSystem.hpp  SocketSystem.hpp
src/sensor/: Acquisition.hpp  InputSensor.hpp  OutputSensor.hpp  Sensor.hpp  SensorSpec.hpp  SensorUtils.hpp
src/sensor/outputSensor/: OutputSensor_1D_Dof6.hpp  OutputSensor_2D_RGB8.hpp  OutputSensor_3D_Density.hpp  OutputSensor_Dof6_RGB8.hpp  OutputSensor_Dof6_RGB8_PACKED.hpp  OutputSensor_Dof6_RGB8_PACKED_UPDATED.hpp  OutputSensor_Instance.hpp  (+1 more)
src/server/: Server.hpp  ServerI.hpp
tests/: CMakeLists.txt  test_common.cpp  test_common.hpp
tests/core/: test-core-Buffer.cpp  test-core-MatrixT.cpp
tests/core/io/: test-core-io-InputOutput.cpp  test-core-io-Serializer.cpp  test_core_io_common.hpp
tests/core/matrix/: test-core-matrix-compatEigen3.cpp  test-core-matrix-compatOIIO.cpp  test-core-matrix-compatOpenCV.cpp
tests/sensor/: test-sensor-compatOsArch.cpp  test-sensor-inputOutputSyncSensor.cpp
(+16 files in other folders)
